[package]
name = "css-colors"
version = "1.0.1"
authors = ["vaidehijoshi <vaidehi.sj@gmail.com>", "chancancode <godfreykfc@gmail.com>"]

description = "A Rust converter to transform CSS colors."
repository = "https://github.com/vaidehijoshi/css-colors"
homepage = "https://github.com/vaidehijoshi/css-colors"
keywords = ["color", "colors", "colour", "css", "converter"]
readme = "README.md"
license = "ISC"

[dependencies]
